...
    var body: some View {
        Text("Dashboard")
            .font(.system(size: 32).bold())
            .padding(.vertical)
            .fontWeight(.semibold)
            .frame(maxWidth: .infinity, alignment: .leading)
            .accessibilityIdentifier("dashboardTitle")
    }
}

private struct DashboardDetailsNavigationView: View {
    @Environment(\.colorScheme) var colorScheme: ColorScheme

...
                    
                    InfoRowView(title: "Compensated", value: String(format: "%.0f", viewModel.co2Compensated) + " Kg", icon: "leaf",  isSystemIcon: true, color: AppColors.green, imageValue: false, imageValueString: nil)
                }
                .padding(.bottom, 7)
            }
            .padding(EdgeInsets(top: 7, leading: 15, bottom: 7, trailing: 15))
            .overlay(Color.clear.accessibilityIdentifier("co2Tracker"))
        }
        
        Button(action: {
            if !isPresenting {
                isPresenting = true
                navigationPath.append(NavigationDestination.GeneralDetailsView(viewModel))
...
                    InfoRowView(title: "Travel time", value: viewModel.totalDurationString, icon: "clock", isSystemIcon: true, color: AppColors.blue, imageValue: false, imageValueString: nil)
                    
                }
                .padding(.bottom, 7)
            }
            .padding(EdgeInsets(top: 7, leading: 15, bottom: 7, trailing: 15))
            .overlay(Color.clear.accessibilityIdentifier("travelsRecap"))
        }
        
        Button(action: {
            if !isPresenting {
                isPresenting = true
                navigationPath.append(NavigationDestination.WorldExplorationView(viewModel))
...
                    InfoRowView(title: "Continents", value: "\(viewModel.visitedContinents.count) / 6", icon: "globe.europe.africa", isSystemIcon: true, color: AppColors.orange, imageValue: false, imageValueString: nil)
                    InfoRowView(title: "Countries", value: "\(viewModel.visitedCountries) / 195", icon: "mappin.and.ellipse", isSystemIcon: true, color: AppColors.orange, imageValue: false, imageValueString: nil)
                }
                .padding(.bottom, 7)
            }
            .padding(EdgeInsets(top: 7, leading: 15, bottom: 7, trailing: 15))
            .overlay(Color.clear.accessibilityIdentifier("worldExploration"))
        }
    }
}

